2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (autosprintf_all.html): Renamed from autosprintf.html.
	Works around a problem with automake-1.8: It removes autosprintf.html
	during "make mostlyclean".

2003-10-30  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* vasprintf.c: Include <limits.h>, <stdlib.h>.
	(vasprintf): Fail if the resulting length doesn't fit in an 'int'.

2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (clean-local): Renamed from clean-am.
	(html-local): Renamed from html.
	(ps, pdf, .texi.pdf): Remove rules.
	(TEXI2PDF): Remove variable.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-09  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MAKEINFOFLAGS): New variable.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-28  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke AC_C_INLINE.
	* Makefile.am (config.h.msvc): Define SIZE_MAX and inline.

2003-11-23  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* printf-parse.h: Don't include sys/types.h.
	(ARG_NONE): New macro.
	(char_directive): Change type of *arg_index fields to size_t.
	* printf-parse.c: Don't include sys/types.h.
	(SSIZE_MAX): Remove macro.
	(PRINTF_PARSE): Change the type of the arg_index variables to size_t.
	Remove unnecessary overflow check.
	* vasnprintf.c (VASNPRINTF): Update for type change of *arg_index
	fields.
	* configure.ac: Don't invoke gt_TYPE_SSIZE_T.

2003-11-19  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Better test for ptrdiff_t. Invoke gt_TYPE_SSIZE_T and
	gl_XSIZE.

2003-11-17  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (alloca): Remove fallback definition.
	(freea): Remove definition.